fix(z-index): increase header z-index

--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     margin-left: -165px;
     margin-right: -165px;
-    z-index: 5;
+    z-index: 100;
     background-color: var(--white);
     gap: 350px;
     @include desktop{
@@ -28,7 +28,7 @@
     padding: 25px;
     background-color: var(--white);
     position: fixed;
-    z-index: 7;
+    z-index: 100;
     width: 100%;
     top: 0;
     right: 0;
